Adicionando a section de produtos

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -8,6 +8,7 @@
 
 :root {
     --bg: #fff9ea;
+    --text-b: #1d1d1d;
     --p-color: #e9a209;
     --btn-color: #ffcb45;
     --btn-hover: #f8d477;
