--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -3,16 +3,82 @@
     display: flex;
     min-height: calc(100vh - 96px);
     overflow: hidden;
+    position: relative;
 }
 
 .cta {
-    width:35%;
+    width:40%;
+    display: flex;
+    flex-direction: column;
+    gap: 28px;
+    margin-top: 5%;
+}
+
+.ctaTitle {
+    font-size: 2rem;
+    color:var( --text-b);
+}
+
+.ctaTitle span {
+    color: var(--p-color);
+}
+
+.cta p {
+    font-size: 1.2rem;
+}
+
+.cta_buttons {
+    display: flex;
+    gap: 24px;
+}
+
+.social {
+    justify-content: start;
 }
 
 .banner {
-
     width: 70%;
-    background-image: url(/src/images/blueimagee.png);
-    background-repeat: no-repeat;
-    background-size: contain;
+    display: flex;
+    justify-content: end;
+    align-items: start;
+    z-index: 2;
 }
+
+.banner img{
+    width: 100%;
+    height: 100%;
+ }
+
+ .shape {
+    background-color: #ffe8b4;
+    width: 50%;
+    height: 100%;
+    position: absolute;
+    border-radius: 40% 30% 0% 20%;
+    top: 0;
+    right: 0;
+    z-index: 1;
+ }
+
+ @media screen and (max-width: 1170px) {
+
+    .home {
+        min-height: 100%;
+        padding-top: 0px;
+
+    }
+
+    .banner, .shape {
+        display: none;
+    }
+
+    .cta {
+        width: 100%;
+        align-items: center;
+        text-align: center;
+    }
+
+    .cta_buttons {
+        flex-direction: column;
+    }
+ }
