--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -33,7 +33,12 @@
 }
 
 .social {
-    justify-content: start;
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 48px;
+    color: #1d1d1dad
 }
 
 .banner {
@@ -80,5 +85,15 @@
 
     .cta_buttons {
         flex-direction: column;
+    }
+
+    .social {
+        display: flex;
+        list-style: none;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 48px;
+        color: #1d1d1dad
     }
  }
