--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -10,9 +10,12 @@
     justify-content: space-between;
 }
 
-.Navfogo {
-    font-size: 24px;
-    color: var(--p-color);
+.navlogo {
+    background-image: url(/src/images/logoFinder.png);
+    background-position: center;
+    background-size: cover;
+    width: 200px;
+    height: 100px;
 }
 
 .navList,
