--- a/src/styles/products.css
+++ b/src/styles/products.css
@@ -12,6 +12,8 @@
     border-radius: 8px;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 h1 {
@@ -23,10 +25,17 @@ h1 {
     display: flex;
     justify-content: center;
     gap: 28px;
+    width: 100%;
+    align-items: center;
+}
+
+.container-form .btnDefault {
+    height: 45px;
 }
 
 .container-form input {
     width: 100%;
+    margin: 18px 0;
 }
 
 #search-input {
@@ -41,6 +50,7 @@ h1 {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 20px;
+    justify-content: center;
 }
 
 .product {
@@ -81,31 +91,52 @@ h1 {
     text-decoration: underline;
 }
 
+.container h3 {
+    align-self: start;
+}
+
 #categories {
     display: flex;
-    justify-content: center;
-    gap: 10px;
+    justify-content: space-between;
     margin: 20px 0px;
+    width: 100%;
+    padding: 20px;
+}
+
+#categories a {
+    align-self: self-end;
+    text-decoration: none;
+    color: #1d1d1dad;
+}
+
+.categoriesBtn {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 150px;
+    width: 100px;
+    gap: 16px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 12px 2px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    border: none;
+    transition: .3s ease;
+    background-color: #F2F2F2;
+}
+
+.categoriesBtn i {
+    font-size: 2rem;
 }
 
 #categoriesMobile {
     display: none;
 }
 
-#categories button {
-    padding: 10px 15px;
-    background-color: #333;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: 0.3s ease;
-    box-shadow: 0px 0px 12px 4px rgba(0, 0, 0, 0.1);
-    color: #fff;
-}
 
 #categories button:hover {
     background-color: var(--btn-hover);
-    box-shadow: 0px 0px 12px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 12px 4px rgba(0, 0, 0, 0.1);
     color: white;
 }
 
@@ -150,6 +181,8 @@ h1 {
     #categoriesMobile.active {
         display: flex;
         flex-direction: column;
+        justify-content: center;
+        align-items: start;
         gap: 8px;
     }
 
@@ -159,7 +192,6 @@ h1 {
         color: #1d1d1dad;
         font-weight: 600;
         cursor: pointer;
-        text-align: center;
     }
 
     #results {
