--- a/src/styles/products.css
+++ b/src/styles/products.css
@@ -58,26 +58,78 @@ h1 {
     flex-direction: column;
     align-items: center;
     border-radius: 20px;
-    gap: 20px;
+    gap: 80px;
+    height: 450px;
     width: auto;
-    padding: 20px;
+    padding: 15px;
     background-color: #fff;
     box-shadow: 0px 0px 12px 4px rgba(0, 0, 0, 0.1);
+    position: relative;
+    overflow: hidden;
+}   
+
+
+
+.product-heart {
+    position: absolute;
+    background-color: var(--p-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.5rem;
+    color: #fff;
+    width: 70px;
+    height: 70px;
+    right: -10px;
+    top: -10px;
+    border-radius: 0px 37.5px 0px 42.5px;
+    cursor: pointer;
 }
 
-.product img {
-    width:50%;
+.product_infosImg {
     height: 50%;
+    padding: 10px;
+}
+
+.product_infosImg img{
+    width: 100%;
+    height: 100%;
     border-radius: 4px;
+}
+
+.product_infos {
+    height: 20%;
+    padding: 10px;
 }
 
 .product h2 {
     font-size: 12px;
     color: #333;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-height: 3em;
 }
 
 .product p {
     color: #666;
+}
+
+.product .price {
+    color: black;
+    font-size: 1.5rem;
+}
+
+.product .pPromotion {
+    position: absolute;
+    color: rgb(247, 81, 81);
+    text-decoration: line-through;
+    opacity: 0.5;
+    left: 50%;
+    transform: translate(-50%);
+
 }
 
 .product a {
@@ -179,7 +231,7 @@ h1 {
         align-items: center;
     }
 
-    #categoriesMobile.active {
+    #categoriesMobile{
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -205,5 +257,12 @@ h1 {
 
     .product {
         width: 100%;
+        height: 500px;
     }
+
+    .product_infosImg img {
+        height: 200px;
+    }
+
+
 }
