--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,6 +1,10 @@
 .headerContainer {
     width: 100%;
-    padding: 28px 8%;
+    padding: 0 8%;
+    position: sticky;
+    top: 0;
+    background-color: var(--bg);
+    z-index: 10;
 }
 
 .headerNavBar {
