--- a/src/styles/products.css
+++ b/src/styles/products.css
@@ -103,7 +103,7 @@ h1 {
 }
 
 .product h2 {
-    font-size: 12px;
+    font-size: 16px;
     color: #333;
     display: -webkit-box;
     -webkit-line-clamp: 2;
@@ -128,6 +128,7 @@ h1 {
     text-decoration: line-through;
     opacity: 0.5;
     left: 50%;
+    top: 65%;
     transform: translate(-50%);
 
 }
