--- a/src/styles/products.css
+++ b/src/styles/products.css
@@ -60,7 +60,7 @@ h1 {
     border-radius: 20px;
     gap: 80px;
     height: 450px;
-    width: auto;
+    width: 100%;
     padding: 15px;
     background-color: #fff;
     box-shadow: 0px 0px 12px 4px rgba(0, 0, 0, 0.1);
@@ -257,13 +257,17 @@ h1 {
     }
 
     .product {
-        width: 100%;
+        width: 45%;
         height: 500px;
     }
 
     .product_infosImg img {
         height: 200px;
     }
+}
 
-
+@media screen and (max-width: 600px) {
+    .product {
+        width: 100%;
+    }
 }
