--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -29,28 +29,13 @@
     justify-content: center;
     align-items: center;
     gap: 48px;
-    color: #1d1d1dad
+    color: var(--black-1);
 }
 
 .navList_item a {
     text-decoration: none;
-    color: #1d1d1dad;
+    color: var(--black-1);
     font-weight: 600;
-}
-
-.social_buttons a {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 10px;
-    width: 45px;
-    height: 45px;
-    font-size: 1.25rem;
-    color: #1d1d1d;
-    background-color: #fff;
-    text-decoration: none;
-    box-shadow: 0px 0px 12px 4px rgba(0, 0, 0, 0.1);
-    transition: box-shadow .3s ease;
 }
 
 .social_buttons a:hover {
@@ -58,7 +43,7 @@
 }
 
 .navList_item.active a {
-    color: #1d1d1d;
+    color: var(--black-2);
     border-bottom: 3px solid #ffe100;
 }
 
@@ -67,12 +52,27 @@
     display: none;
 }
 
+
 @media screen and (max-width: 1170px) {
     .btn_Mobile {
-        display: block;
+        border: none;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: var(--yellow-2);
+        border-radius: 12px;
+        padding: 10px 14px;
+        font-weight: 600;
+        box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.1);
+        cursor: pointer;
+        transition: background-color .3s ease;
     }
 
-    .navList, .navList_social {
+    .btn_Mobile:hover {
+        background-color: var(--yellow-1);
+    }
+
+    .navList{
         display: none;
     }
 
