--- a/src/styles/products.css
+++ b/src/styles/products.css
@@ -18,7 +18,7 @@
 
 h1 {
     text-align: center;
-    color: #333;
+    color: var(--gray-0);
 }
 
 .container-form {
@@ -62,7 +62,7 @@ h1 {
     height: 450px;
     width: 100%;
     padding: 15px;
-    background-color: #fff;
+    background-color: var(--white);
     box-shadow: 0px 0px 12px 4px rgba(0, 0, 0, 0.1);
     position: relative;
     overflow: hidden;
@@ -72,12 +72,12 @@ h1 {
 
 .product-heart {
     position: absolute;
-    background-color: var(--p-color);
+    background-color: var(--yellow-3);
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 1.5rem;
-    color: #fff;
+    color: var(--white);
     width: 70px;
     height: 70px;
     right: -10px;
@@ -104,7 +104,7 @@ h1 {
 
 .product h2 {
     font-size: 16px;
-    color: #333;
+    color: var(--gray-0);
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
@@ -155,7 +155,7 @@ h1 {
 #categories a {
     align-self: self-end;
     text-decoration: none;
-    color: #1d1d1dad;
+    color: var(--black-1);
 }
 
 .categoriesBtn {
@@ -184,9 +184,9 @@ h1 {
 
 
 #categories button:hover {
-    background-color: var(--btn-hover);
+    background-color: var(--yellow-1);
     box-shadow: 0px 0px 12px 4px rgba(0, 0, 0, 0.1);
-    color: white;
+    color: var(--white);
 }
 
 .btnMobile_categorias{
@@ -211,19 +211,19 @@ h1 {
     .btnMobile_categorias {
         display: block;
         padding: 10px 15px;
-        background-color: #333;
+        background-color: var(--gray-0);
         border: 1px solid #ddd;
         border-radius: 4px;
         cursor: pointer;
         transition: 0.3s ease;
         box-shadow: 0px 0px 12px 4px rgba(0, 0, 0, 0.1);
-        color: #fff;
+        color: var(--white);
     }
 
     .btnMobile_categorias:hover {
-        background-color: var(--btn-hover);
+        background-color: var(--yellow-1);
     box-shadow: 0px 0px 12px 8px rgba(0, 0, 0, 0.1);
-    color: white;
+    color: var(--white);
     }
 
     #categories {
@@ -243,7 +243,7 @@ h1 {
     .btn_Mobile_Item {
         background-color: transparent;
         border: none;
-        color: #1d1d1dad;
+        color: var(--black-1);
         font-weight: 600;
         cursor: pointer;
     }
