--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -3,6 +3,7 @@
 @import url("footer.css");
 @import url("products.css");
 @import url("header.css");
+@import url("login.css");
 * {
     margin: 0;
     padding: 0;
