--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -40,7 +40,7 @@ section {
 }
 
 .contentAbout section{
-    margin: 8% 0 8% 0; 
+    margin: 8%; 
 }
 
 .btnDefault {
@@ -78,6 +78,12 @@ section {
 
 .social_buttons a:hover {
     box-shadow: 0px 0px 12px 8px rgba(0, 0, 0, 0.1);
+}
+
+@media screen and (max-width: 1170px) {
+    .contentAbout section {
+        margin: 4% 0;
+    }
 }
 
 @keyframes upAndDown {
