--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,7 +1,7 @@
 .headerContainer {
     width: 100%;
     padding: 0 8%;
-    position: sticky;
+    position: fixed;
     top: 0;
     background-color: var(--bg);
     z-index: 10;
