--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -18,7 +18,7 @@ body {
     background-color: #ecf0f1;
 }
 
-.content {
+.contentLogin {
     background-color:#fff ;
     border-radius: 15px;
     width: 80%;
@@ -29,7 +29,7 @@ body {
     position: relative;
 }
 
-.content::before {
+.contentLogin::before {
     content: "";
     position: absolute;
     background-color: #ffcb45;
@@ -37,13 +37,14 @@ body {
     height: 100%;
 }
 
-.title-login {
+.title {
     color: #000000;
     font-size: 28px;
     font-weight: bold;
     text-transform: capitalize;
 }
-.title-login-welcome {
+
+.title-primary {
     color: #fff;
 }
 
@@ -86,6 +87,9 @@ body {
 
 .second-column {
     flex: 2 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .list-social-media {
