--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -141,10 +141,23 @@ body {
 }
 
 .formLogin input {
+    width: 100%;
     height: 45px;
     border: none;
     color: #ecf0f1;
+    background-color: #ecf0f1;
+}
+
+.Labellogin-input {
+    display: flex;
+    align-items: center;
+    background-color: #ecf0f1;
     margin: 8px;
+}
+
+.icon-modify {
+    color: #95a5a6;
+    padding: 0 5px;
 }
 
 .second-content {
