--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -15,11 +15,11 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #ecf0f1;
+    background-color: var(--light-gray);
 }
 
 .contentLogin {
-    background-color:#fff ;
+    background-color:var(--white) ;
     border-radius: 15px;
     width: 960px;
     height: 50%;
@@ -31,12 +31,12 @@ body {
 .contentLogin::before {
     content: "";
     position: absolute;
-    background-color: #ffcb45;
+    background-color: var(--yellow-2);
     width: 40%;
     height: 100%;
 }
 
-.title {
+.titleLogin {
     color: #000000;
     font-size: 28px;
     font-weight: bold;
@@ -44,31 +44,31 @@ body {
 }
 
 .title-primary {
-    color: #fff;
+    color: var(--white);
 }
 
 .title-second {
-    color: #ffcb45;
+    color: var(--yellow-2);
 }
 
-.descripition {
+.descripitionLogin {
     font-size: 14px;
     font-weight: 300;
     line-height: 30px;
 }
 
 .descripition-primary {
-    color: #fff;
+    color: var(--white);
 }
 
 .descripition-second {
-    color: #7f8c8c;
+    color: var( --light-blue);
 }
 
 .btnLogin {
     border-radius: 15px;
     text-transform: uppercase;
-    color: #fff;
+    color: var(--white);
     font-size: 10px;
     padding: 10px 50px;
     cursor: pointer;
@@ -80,23 +80,23 @@ body {
 
 .btn-primary {
     background-color: transparent;
-    border: 1px solid #fff;
+    border: 1px solid var(--white);
 }
 
 .btn-primary:hover {
-    background-color: #fff;
-    color: #ffcb45;
+    background-color: var(--white);
+    color: var(--yellow-2);
 }
 
 .btn-second {
-    background-color: #ffcb45;
-    border: 1px solid #ffcb45;
+    background-color: var(--yellow-2);
+    border: 1px solid var(--yellow-2);
 }
 
 .btn-second:hover {
-    background-color: #fff;
-    border: 1px solid #ffcb45;
-    color: #ffcb45;
+    background-color: var(--white);
+    border: 1px solid var(--yellow-2);
+    color: var(--yellow-2);
 }
 
 .first-content {
@@ -122,11 +122,11 @@ body {
 }
 
 .item-social-media a {
-    color: #95a5a6;
+    color: var( --light-blue);
 }
 
 .item-social-media {
-    border: 1px solid #95a5a6;
+    border: 1px solid var( --light-blue);
     border-radius: 50%;
     width: 35px;
     height: 35px;
@@ -144,19 +144,19 @@ body {
     width: 100%;
     height: 45px;
     border: none;
-    color: #ecf0f1;
-    background-color: #ecf0f1;
+    color: var(--light-gray);
+    background-color: var(--light-gray);
 }
 
 .Labellogin-input {
     display: flex;
     align-items: center;
-    background-color: #ecf0f1;
+    background-color: var(--light-gray);
     margin: 8px;
 }
 
 .icon-modify {
-    color: #95a5a6;
+    color: var( --light-blue);
     padding: 0 5px;
 }
 
