--- a/src/styles/products.css
+++ b/src/styles/products.css
@@ -86,6 +86,10 @@ h1 {
     cursor: pointer;
 }
 
+.product-heartClick {
+    color: red;
+}
+
 .product_infosImg {
     height: 50%;
     padding: 10px;
