--- a/src/styles/products.css
+++ b/src/styles/products.css
@@ -72,7 +72,7 @@ h1 {
 
 .product-heart {
     position: absolute;
-    background-color: var(--yellow-3);
+    background-color: var(--yellow-2);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -87,7 +87,8 @@ h1 {
 }
 
 .product-heartClick {
-    color: red;
+    transition: .5s ease;
+    color: rgb(255, 4, 4);
 }
 
 .product_infosImg {
