--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -7,7 +7,7 @@
 @import url("about.css");
 @import url("bid.css");
 @import url("contact.css");
-
+@import url("favoritos.css");
 * {
     margin: 0;
     padding: 0;
