--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -324,3 +324,110 @@ body {
         width: 40%;
     }
 }
+
+
+/* versão mobile */
+
+@media screen and (max-width: 1040px) {
+    .contentLogin {
+        width: 100%;
+        height: 100%;
+    }
+
+    .contentLogin::before {
+        width: 100%;
+        height: 40%;
+        top: 0;
+        border-radius: 0;
+    }
+
+    .first-content, .second-content {
+        flex-direction: column;
+        justify-content: space-around;
+    }
+
+    .sign-in-js .contentLogin::before {
+        top: 60%;
+        left: 0;
+        border-radius: 0;
+    }
+
+    .formLogin {
+        width: 90%;
+    }
+
+    .first-column, .second-column {
+        width: 100%;
+    }
+
+    /* animações mobile css */
+
+    @keyframes deslocamentoLoginEsq {
+        from {
+            top: 0;
+            opacity: 1;
+            z-index: 12;
+        }
+    
+        to {
+            top: -100px;
+            opacity: 0;
+            z-index: -1;
+        }
+    }
+    
+    @keyframes deslocamentoLoginDir {
+        from {
+            top: 0;
+            opacity: 1;
+            z-index: 12;
+        }
+    
+        to {
+            top: 100px;
+            opacity: 0;
+            z-index: -1;
+        }
+    }
+    
+    
+    
+    @keyframes slideinLogin {
+    
+        from {
+            top: 0;
+            height: 40%;
+        }
+    
+        to {
+            top: 60%;
+            height: 40%;
+        }
+    }
+    
+    @keyframes slideoutLogin {
+    
+        from {
+            top: 60%;
+            height: 40%;
+        }
+    
+        to {
+            top: 0%;
+            height: 40%;
+        }
+    }
+
+}
+
+@media screen and (max-width: 740px) {
+    .formLogin {
+        width: 50%;
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .formLogin {
+        width: 100%;
+    }
+}
