--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -332,6 +332,8 @@ body {
     .contentLogin {
         width: 100%;
         height: 100%;
+        margin-top: 160px;
+        margin-bottom: 20px;
     }
 
     .contentLogin::before {
@@ -339,7 +341,8 @@ body {
         height: 40%;
         top: 0;
         border-radius: 0;
-    }
+        }
+    
 
     .first-content, .second-content {
         flex-direction: column;
