--- a/src/styles/favoritos.css
+++ b/src/styles/favoritos.css
@@ -6,41 +6,94 @@ body,html{
     height: 100%;
 }
 .container-favoritos{
-    height: calc(100% - 100px);
+    height:fit-content;
     width: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: end;
     align-items: center;
 }
 .container-favoritos main{
-    width: 85%;
-    height: 90%;
-    padding-block: 20px;
+    width: 100vw;
+    min-height: 100%;
     border-radius: 5px;
     background-color: var(--yellow-0);
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
 }
 .products-fav{
     width: 100%;
     height: 80%;
     display: flex;
+    padding: 50px;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     gap: 30px;
 }
-.product-fav-one{
+.container-title{
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: red;
+}
+.product {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    text-align: center;
-    width: 200px;
-    gap: 5px;
-    padding: 20px;
-    border-radius: 10px;
-    background-color: var(--yellow-1);
-    height: 300px;
-    box-shadow: 0px 0px 25px 0 #a98d46;
+    border-radius: 20px;
+    gap: 20px;
+    height: 450px;
+    width: 500px;
+    padding: 15px;
+    background-color: var(--white);
+    box-shadow: 0px 0px 12px 4px rgba(0, 0, 0, 0.1);
+    position: relative;
+}   
+.product img{
+    height: 200px;
 }
-.product-fav-one img{
-    border-radius: 25px;
+.product h2{
+    width: 250px;
+    font-size: 15px;
+    text-align: justify;
+
+}
+.product_infosImg{
+    width: 100%;
+    gap: 10px;
+    height: 250px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.product_info{
+    width: 100%;
+    background-color: green;
+}
+.product-heart {
+    position: absolute;
+    background-color: var(--yellow-2);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.5rem;
+    color: var(--white);
+    width: 70px;
+    height: 70px;
+    right: -10px;
+    top: -10px;
+    border-radius: 0px 37.5px 0px 42.5px;
+    cursor: pointer;
+}
+
+.product-heartClick {
+    transition: .5s ease;
+    color: rgb(255, 4, 4);
 }
