--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -362,12 +362,12 @@ html {
         align-items: center;
         justify-content: center;
         height: 100vh;
-        background-color: #ecf0f1;
+        background-color: var(--bg);
         padding: 20px;
     }
 
     .containerMobile h2 {
-        color: #000;
+        color: var(--black-1);
         font-size: 22px;
     }
 
@@ -388,11 +388,11 @@ html {
     }
 
     .btnLogin {
-        background-color: #ffcb45;
+        background-color: var(--yellow-2);
         border: none;
         padding: 10px;
         border-radius: 5px;
-        color: white;
+        color: var(--white);
         cursor: pointer;
     }
 
@@ -413,12 +413,12 @@ html {
         align-items: center;
         justify-content: center;
         height: 100vh;
-        background-color: #ecf0f1;
+        background-color: var(--bg);
         padding: 20px;
     }
 
     .containerMobile h2 {
-        color: #000;
+        color: var(--black-1);
         font-size: 22px;
     }
 
@@ -439,11 +439,11 @@ html {
     }
 
     .btnLogin {
-        background-color: #ffcb45;
+        background-color: var(--yellow-2);
         border: none;
         padding: 10px;
         border-radius: 5px;
-        color: white;
+        color: var(--white);
         cursor: pointer;
     }
 
@@ -474,12 +474,12 @@ html {
         align-items: center;
         justify-content: center;
         height: 100vh;
-        background-color: #ecf0f1;
+        background-color: var(--bg);
         padding: 20px;
     }
 
     .containerMobile h2 {
-        color: #000;
+        color: var(--black-1);
         font-size: 22px;
     }
 
@@ -500,11 +500,11 @@ html {
     }
 
     .btnCadastro {
-        background-color: #ffcb45;
+        background-color: var(--yellow-2);
         border: none;
         padding: 10px;
         border-radius: 5px;
-        color: white;
+        color: var(--white);
         cursor: pointer;
     }
 
@@ -525,12 +525,12 @@ html {
         align-items: center;
         justify-content: center;
         height: 100vh;
-        background-color: #ecf0f1;
+        background-color: var(--bg);
         padding: 20px;
     }
 
     .containerMobile h2 {
-        color: #000;
+        color: var(--black-1);
         font-size: 22px;
     }
 
@@ -546,16 +546,16 @@ html {
         height: 38px;
         margin-bottom: 8px;
         padding: 5px;
-        border: 1px solid #ccc;
+        border: 1px solid var(--light-gray);
         border-radius: 5px;
     }
 
     .btnCadastro {
-        background-color: #ffcb45;
+        background-color: var(--yellow-2);
         border: none;
         padding: 10px;
         border-radius: 5px;
-        color: white;
+        color: var(--white);
         cursor: pointer;
     }
 
