--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -26,7 +26,6 @@
     --yellow-0: #ffe8b4;
     --light-gray: #ecf0f1;
     --light-blue: #95a5a6;
-
 }
 
 html {
@@ -34,9 +33,15 @@ html {
     overflow-x: hidden;
   }
 
+html,body{
+    height: 100%;
+}
 body {
     background-color: var(--bg);
     overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 section {
